# fuel_workshop_part_2

std_contract/: Cargo.toml  Forc.toml
std_contract/docs/: background.md  build.md  setup.md  test.md  wallet.md
std_contract/src/: main.sw
std_contract/tests/: integration.rs
std_contract_frontend/: package.json  pnpm-lock.yaml
std_contract_frontend/src/: App.tsx
std_contract_frontend/src/contracts/: CounterContractAbi.d.ts  CounterContractAbi.hex.ts  index.ts
std_contract_frontend/src/contracts/factories/: CounterContractAbi__factory.ts
